# agent-host-app

./: settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/aizonme/agenthost/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/aizonme/agenthost/: AgentMessagingService.kt  AgentService.kt  BootReceiver.kt  MainActivity.kt  NodeEngineManager.kt  PushReceiver.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aizonme/agenthost/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
